# ManagingSoftware

./: .gitignore  Dockerfile  Dockerfile.repo  Dockerfile.workitem  LICENSE  README.md  azure-pipelines.yml  desktopApplication.py  docker-compose.yml  pyproject.toml  repoAdapter.py  requirements.txt  workitemAdapter.py
diagrams/: class_diagram.drawio
src/: desktopApplication.py  graphGenerator.py  repoAdapter.py  workitemAdapter.py  workitemScope.py
src/repo/: Dockerfile
src/workitem/: Dockerfile
tests/: ado_feature_data.json  ado_history_workitem_data.json  ado_relation_workitem_data.json  ado_repo_commits_data.json  ado_repos_data.json  ado_sprints_data.json  ado_teams_data.json  ado_users_data.json  ado_workitem_data.json  bitbucket_repo_commits_data.json  bitbucket_repos_data.json  github_repo_commits_data.json  github_repos_data.json  jira_board_data.json  jira_boards_data.json  jira_feature_data.json  jira_history_workitem_data.json  jira_project_data.json  jira_relation_workitem_data.json  jira_sprints_data.json  jira_users_data.json  jira_workitem_data.json  run_tests.cmd  test_repoAdapter.py  test_workitemAdapter.py
